# harbour-sailbabel

./: CMakeLists.txt  README.md  harbour-sailbabel.desktop  harbour-sailbabel.pro
.github/workflows/: build.yaml
images/: harbour.xcf
qml/: harbour-sailbabel.qml
qml/components/: QueryField.qml
qml/cover/: CoverPage.qml
qml/pages/: About.qml  ChooseDictionary.qml  Error.qml  History.qml  LoadDictionary.qml  MainPage.qml  Settings.qml
rpm/: harbour-sailbabel.changes.in  harbour-sailbabel.spec  harbour-sailbabel.yaml
src/: AppModel.cpp  AppModel.hpp  Dictionary.cpp  Dictionary.hpp  FolderListModel.cpp  FolderListModel.hpp  dictionary.cpp  dictionary.hpp  folderlistmodel.cpp  folderlistmodel.hpp  harbour-sailbabel.cpp  sqlquerymodel.cpp  sqlquerymodel.h
translations/: harbour-sailbabel-de.ts  harbour-sailbabel.de.ts  harbour-sailbabel.en.ts  harbour-sailbabel.ts
